--- a/Mounir (viewing data).ipynb
+++ b/Mounir (viewing data).ipynb
@@ -1331,7 +1331,18 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "#Evaluating performance\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "from IPython.display import display\n",
     "\n",
     "df = pd.read_csv(\"maps-synthetic-data-v1.1.csv\")\n",
@@ -1341,8 +1352,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ad0f70dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal-length</th>\n",
+       "      <th>sepal-width</th>\n",
+       "      <th>petal-length</th>\n",
+       "      <th>petal-width</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal-length  sepal-width  petal-length  petal-width           Class\n",
+       "0             5.1          3.5           1.4          0.2     Iris-setosa\n",
+       "1             4.9          3.0           1.4          0.2     Iris-setosa\n",
+       "2             4.7          3.2           1.3          0.2     Iris-setosa\n",
+       "3             4.6          3.1           1.5          0.2     Iris-setosa\n",
+       "4             5.0          3.6           1.4          0.2     Iris-setosa\n",
+       "..            ...          ...           ...          ...             ...\n",
+       "145           6.7          3.0           5.2          2.3  Iris-virginica\n",
+       "146           6.3          2.5           5.0          1.9  Iris-virginica\n",
+       "147           6.5          3.0           5.2          2.0  Iris-virginica\n",
+       "148           6.2          3.4           5.4          2.3  Iris-virginica\n",
+       "149           5.9          3.0           5.1          1.8  Iris-virginica\n",
+       "\n",
+       "[150 rows x 5 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\"\n",
+    "names = ['sepal-length', 'sepal-width', 'petal-length', 'petal-width', 'Class']\n",
+    "dataset = pd.read_csv(url, names=names)\n",
+    "display(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "536d5f70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Divide dataset into features and corresponding labels.\n",
+    "X = dataset.iloc[:, 0:4].values # first 4 cols assigned to X\n",
+    "y = dataset.iloc[:, 4].values # last col assigned to Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3225b61e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Split data into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e798dc13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Similar to PCA - perform feature scaling for LDA\n",
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "49ee99df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Perform LDA using sklearn\n",
+    "lda = LDA(n_components=1) #n_components refers to num of linear discriminants\n",
+    "X_train = lda.fit_transform(X_train, y_train)\n",
+    "X_test = lda.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "594fc9af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training and making predicitons\n",
+    "classifier = RandomForestClassifier(max_depth=2, random_state=0)\n",
+    "\n",
+    "classifier.fit(X_train, y_train)\n",
+    "y_pred = classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d85487be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11  0  0]\n",
+      " [ 0 13  0]\n",
+      " [ 0  0  6]]\n",
+      "Accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(cm)\n",
+    "print('Accuracy: ' + str(accuracy_score(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cb26e3a",
+   "metadata": {},
+   "source": [
+    "With one linear discriminant algorithm achieved an accuracy of 100% which is greater than "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eae83e6b",
    "metadata": {},
    "outputs": [],
    "source": []
