--- a/George.ipynb
+++ b/George.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -62,7 +62,30 @@
    "outputs": [],
    "source": [
     "tsne = TSNE(n_components=2, random_state = 0) #instantiate new tsne class \n",
-    "                                              #n_components is the no. of dimensions we want to reduce our dataset to\n"
+    "                                              #n_components is the no. of dimensions we want to reduce our dataset to\n",
+    "z = tsne.fit_transform(df) #Fit X into an embedded space and return that transformed output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = df[''].values  #differentiate the 2d data from our classes (takes out values of a column)\n",
+    "plt.figure(figsize=(6,5))\n",
+    "plt.title(\"Mental Health & Screen Time\")\n",
+    "plt.scatter(c='r' , label='')\n",
+    "plt.scatter(c= 'b', label='')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   }
  ],
