--- a/MCA Slider.ipynb
+++ b/MCA Slider.ipynb
@@ -2057,7 +2057,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "ca56d158",
+   "id": "08de9f26",
    "metadata": {
     "scrolled": false
    },
@@ -3262,7 +3262,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "1c498f24",
+   "id": "17818107",
    "metadata": {},
    "outputs": [
     {
@@ -3360,10 +3360,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3e42813f",
+   "execution_count": 100,
+   "id": "60c1f090",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<AxesSubplot:title={'center':'RFECV for RandomForestClassifier'}, xlabel='Number of Features Selected', ylabel='Score'>"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import StratifiedKFold\n",
@@ -3385,7 +3403,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "b385b5a0",
+   "id": "2c9b4c77",
    "metadata": {},
    "outputs": [
     {
@@ -3407,7 +3425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e91026",
+   "id": "0dd96b65",
    "metadata": {},
    "outputs": [],
    "source": []
